# noobit

./: .gitignore  README.md
.bruno/: Create User.bru  bruno.json
.bruno/tests/: db.bru  version.bru
backend/: .env  README.md  go.mod  main.go
backend/.run/: go build noobit.run.xml
backend/api/: entry.go
backend/entry/: Cargo.toml  Makefile.toml
backend/entry/sql/: init.sql
backend/entry/src/: config.rs  errors.rs  main.rs
backend/entry/src/helpers/: errors.rs  mod.rs  utils.rs
backend/entry/src/model/: base.rs  error.rs  mod.rs  user.rs
backend/entry/src/web/: mod.rs  testing.rs
backend/entry/src/web/users/: base.rs  create.rs  errors.rs  mod.rs
backend/utils/: environment.go
docs/: README.md
journal/: notebook.zim
journal/Journal/2023/12/: 23.txt
