[package]
name = "entry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
tokio = {version = "1.35", features = ["full"]}
tower-http = {version = "0.5", features = ["fs"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
http = "1"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
chrono = { version = "0.4", features = ["serde"] }
serde_with = {version = "3.4.0"}
reqwest = {version = "0.11", features = ["json"]}
sea-query = {version = "0", features = ["sea-query-derive"]}
uuid = {version = "1", features = ["serde", "v4"] }
bcrypt="0.15"

[dev-dependencies]
axum-test-helper = "0.*"